Change logging to use @SLF4J without guard statements